--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,8 @@
                 "app/code/*/composer.json"
             ]
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^7.5"
     }
 }
