--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     "require": {
         "zendframework/zend-config": "^3.2",
         "zendframework/zend-servicemanager": "^3.4",
-        "wikimedia/composer-merge-plugin": "*@dev"
+        "wikimedia/composer-merge-plugin": "*@dev",
+        "robmorgan/phinx": "^0.10.6"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
