--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,15 @@
         "wikimedia/composer-merge-plugin": "*@dev",
         "robmorgan/phinx": "^0.10.6"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^7.5"
+    },
+    "autoload": {
+        "psr-4": {
+            "MadeiraMadeira\\" : "app/code",
+            "MadeiraMadeira\\Dev\\" : "dev"
+        }
+    },
     "minimum-stability": "dev",
     "prefer-stable": true,
     "extra": {
@@ -22,8 +31,5 @@
                 "app/code/*/composer.json"
             ]
         }
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^7.5"
     }
 }
