--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,8 @@
         }
     ],
     "require": {
+        "php": "^7.1",
+        "ext-pdo": "*",
         "zendframework/zend-config": "^3.2",
         "zendframework/zend-servicemanager": "^3.4",
         "wikimedia/composer-merge-plugin": "*@dev",
