--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,12 @@
         "zendframework/zend-servicemanager": "^3.4",
         "wikimedia/composer-merge-plugin": "*@dev",
         "robmorgan/phinx": "^0.10.6",
-        "altorouter/altorouter": "^1.2"
+        "altorouter/altorouter": "^1.2",
+        "twig/twig": "^2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.5"
+        "phpunit/phpunit": "^7.5",
+        "squizlabs/php_codesniffer": "^3.4"
     },
     "autoload": {
         "psr-4": {
@@ -35,5 +37,27 @@
                 "app/code/*/composer.json"
             ]
         }
+    },
+    "scripts": {
+        "test:all": [
+            "@test:unit",
+            "@test:integration"
+        ],
+        "code:cf": [
+            "@code:fix",
+            "@code:check"
+        ],
+        "test:unit": [
+            "./vendor/bin/phpunit --testsuite='Unit' --colors=always"
+        ],
+        "test:integration": [
+            "./vendor/bin/phpunit --testsuite='Integration' --colors=always"
+        ],
+        "code:check": [
+            "./vendor/bin/phpcs --standard=PSR2 --ignore=app/*/migrations,app/*/seeds,app/bootstrap.php app/"
+        ],
+        "code:fix": [
+            "./vendor/bin/phpcbf --standard=PSR2 --ignore=app/*/migrations,app/*/seeds,app/bootstrap.php app/"
+        ]
     }
 }
