Bootstrap and Jquery installed. Minor fixes. Home Page ok!

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/rorteg/app_skeleton#readme",
   "dependencies": {
-    "bootstrap": "^4.2.1"
+    "bootstrap": "^4.2.1",
+    "jquery": "^3.3.1"
   }
 }
