--- a/.gitignore
+++ b/.gitignore
@@ -18,4 +18,7 @@ atlassian*
 /vendor/*
 !/vendor/.htaccess
 /pub/assets/cache/*
+/pub/assets/temp
 !/pub/assets/cache
+/var/cache/*
+!/var/cache/.htaccess
