--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^7.5",
-        "squizlabs/php_codesniffer": "^3.4"
+        "squizlabs/php_codesniffer": "^3.4",
+        "phpro/grumphp": "^0.14.3"
     },
     "autoload": {
         "psr-4": {
