--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   "homepage": "https://github.com/rorteg/app_skeleton#readme",
   "dependencies": {
     "bootstrap": "^4.2.1",
+    "excanvas.js": "^1.0.0",
     "jquery": "^3.3.1",
+    "jquery-sparkline": "^2.4.0",
+    "perfect-scrollbar": "^0.6.10",
     "popper.js": "^1.14.7"
   }
 }
