--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "rorteg/madeiramadeira",
-    "description": "Test Project",
+    "name": "rorteg/app_skeleton",
+    "description": "Project Example",
     "type": "project",
     "authors": [
         {
