--- a/grumphp.yml
+++ b/grumphp.yml
@@ -12,6 +12,7 @@ parameters:
         yamllint: ~
         phpcs:
             standard: ['PSR2']
+            ignore_patterns: ['app/*/migrations','app/*/seeds','app/bootstrap.php','app/*/*/view']
         phpunit:
             config_file: 'phpunit.xml'
             testsuite: 'Unit'
