--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ before_script:
 
 install:
   - composer install
+  - vendor/bin/phinx migrate
+  - vendor/bin/phinx seed:run
 
 # omitting "script:" will default to phpunit
 # use the $DB env variable to determine the phpunit.xml to use
