--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ env:
 
 # execute any number of scripts before the test run, custom env's are available as variables
 before_script:
-  - if [[ "$DB" == "mysql" ]]; then mysql -e "create database IF NOT EXISTS madeiramadeira_dev;" -uroot; fi
+  - mysql -e "create database IF NOT EXISTS madeiramadeira_dev;" -uroot
 
 install:
   - composer install
