--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "excanvas.js": "^1.0.0",
     "jquery": "^3.3.1",
     "jquery-sparkline": "^2.4.0",
-    "perfect-scrollbar": "^0.6.10",
+    "perfect-scrollbar": "^0.6.16",
     "popper.js": "^1.14.7"
+  },
+  "devDependencies": {
+    "codeceptjs": "^2.0.4",
+    "puppeteer": "^1.12.2"
   }
 }
