--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ install:
 # omitting "script:" will default to phpunit
 # use the $DB env variable to determine the phpunit.xml to use
 script:
-  - composer code:cf
+  - composer code:check
   - composer test:all
 
 after_script:
