--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,6 @@ before_script:
 
 install:
   - composer install --ignore-platform-reqs --no-interaction
-  - composer require --dev satooshi/php-coveralls --ignore-platform-reqs --no-interaction
 
 # omitting "script:" will default to phpunit
 # use the $DB env variable to determine the phpunit.xml to use
@@ -26,4 +25,9 @@ script:
   - composer test:all
 
 after_script:
-  - composer upload-coverage
+  - travis_retry composer upload-coverage
+
+cache:
+  directories:
+  - $HOME/.composer/cache
+  - vendor
