--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     "require-dev": {
         "phpunit/phpunit": "^7.5",
         "squizlabs/php_codesniffer": "^3.4",
-        "phpro/grumphp": "^0.14.3"
+        "phpro/grumphp": "^0.14.3",
+        "php-coveralls/php-coveralls": "^2.1"
     },
     "autoload": {
         "psr-4": {
@@ -50,7 +51,7 @@
             "@code:check"
         ],
         "test:unit": [
-            "./vendor/bin/phpunit --testsuite='Unit' --colors=always"
+            "./vendor/bin/phpunit --testsuite='Unit' --colors=always --coverage-clover clover.xml"
         ],
         "test:integration": [
             "./vendor/bin/phpunit --testsuite='Integration' --colors=always"
@@ -65,7 +66,7 @@
             "./vendor/bin/phpunit --coverage-clover clover.xml"
         ],
         "upload-coverage": [
-            "coveralls -v"
+            "vendor/bin/php-coveralls -v"
         ]
     }
 }
