--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,11 @@
         "zendframework/zend-servicemanager": "^3.4",
         "wikimedia/composer-merge-plugin": "*@dev",
         "robmorgan/phinx": "^0.10.6",
-        "altorouter/altorouter": "^1.2",
         "twig/twig": "^2.0",
-        "odan/twig-assets": "^2.0"
+        "odan/twig-assets": "^2.0",
+        "league/route": "^4.2",
+        "zendframework/zend-diactoros": "^2.1",
+        "zendframework/zend-httphandlerrunner": "^1.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.5",
@@ -67,6 +69,9 @@
         ],
         "upload-coverage": [
             "vendor/bin/php-coveralls -v"
+        ],
+        "serve": [
+            "php -S localhost:8085 -t pub/"
         ]
     }
 }
