--- a/composer.json
+++ b/composer.json
@@ -20,13 +20,15 @@
         "odan/twig-assets": "^2.0",
         "league/route": "^4.2",
         "zendframework/zend-diactoros": "^2.1",
-        "zendframework/zend-httphandlerrunner": "^1.1"
+        "zendframework/zend-httphandlerrunner": "^1.1",
+        "symfony/console": "^4.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.5",
         "squizlabs/php_codesniffer": "^3.4",
         "phpro/grumphp": "^0.14.3",
-        "php-coveralls/php-coveralls": "^2.1"
+        "php-coveralls/php-coveralls": "^2.1",
+        "phpstan/phpstan": "^0.11.2"
     },
     "autoload": {
         "psr-4": {
