--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/rorteg/app_skeleton#readme",
   "dependencies": {
-    "bootstrap": "^4.2.1",
+    "bootstrap": ">=4.3.1",
     "excanvas.js": "^1.0.0",
     "jquery": "^3.3.1",
     "jquery-sparkline": "^2.4.0",
